--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   file_picker: ^8.1.2
   cloudinary_public: ^0.23.1
   flutter_rating_bar: ^4.0.1
+  pay: ^2.0.0
 
 dev_dependencies:
   flutter_test:
